--- a/index.html
+++ b/index.html
@@ -28,19 +28,29 @@
 
     <main>
       <section id="services">
-        <h3>Our Services</h3>
+        <h2>Our Services</h2>
+
+        <h3>One-on-One Coaching</h3>
+        <h3>Group Coaching</h3>
+        <h3>Workshops & Seminars</h3>
+        <h3>Online Courses</h3>
       </section>
 
       <section id="why-choose-us">
-        <h3>Why Choose Us</h3>
+        <h2>Why Choose Us</h2>
       </section>
 
       <section id="prices">
-        <h3>Pricing</h3>
+        <h2>Pricing</h2>
+
+        <h3>One-on-One Coaching</h3>
+        <h3>Group Coaching</h3>
+        <h3>Workshops & Seminars</h3>
+        <h3>Online Courses</h3>
       </section>
 
       <section id="take the first step">
-        <h3>Take the First Step Today</h3>
+        <h2>Take the First Step Today</h2>
       </section>
     </main>
 
