--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </table>
       </section>
 
-      <section id="take the first step">
+      <section id="take-the-first-step">
         <h2>Take the First Step Today</h2>
         <p>Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!</p>
 
